themes are cool

--- a/src/AspNet5ThemesSassGrunt/app/content/main.scss
+++ b/src/AspNet5ThemesSassGrunt/app/content/main.scss
@@ -23,3 +23,11 @@
     color: $text_color;
     background-color: $background_color;
 }
+
+.changeThemeButton {
+    color: $text_color;
+    background-color: $background_color;
+    padding:15px;
+    margin:15px;
+    margin-bottom:0;
+}
