--- a/src/AspNet5ThemesSassGrunt/wwwroot/dark_theme.css
+++ b/src/AspNet5ThemesSassGrunt/wwwroot/dark_theme.css
@@ -19,4 +19,11 @@
   color: #fff;
   background-color: #000; }
 
+.changeThemeButton {
+  color: #fff;
+  background-color: #000;
+  padding: 15px;
+  margin: 15px;
+  margin-bottom: 0; }
+
 /*# sourceMappingURL=dark_theme.css.map */
