--- a/src/AspNet5ThemesSassGrunt/wwwroot/default_theme.css
+++ b/src/AspNet5ThemesSassGrunt/wwwroot/default_theme.css
@@ -19,4 +19,11 @@
   color: #000;
   background-color: #fff; }
 
+.changeThemeButton {
+  color: #000;
+  background-color: #fff;
+  padding: 15px;
+  margin: 15px;
+  margin-bottom: 0; }
+
 /*# sourceMappingURL=default_theme.css.map */
